SportManager/force-app/main/default/objects/Jugador__c/Jugador__c.object-meta.xml
<CustomObject>
    <label>Jugador</label>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Jugador Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jugadores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>