SportManager/force-app/main/default/objects/Jugador__c/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Club</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Jugadores</relationshipLabel>
    <relationshipName>Jugadores</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>