SportManager/force-app/main/default/objects/Jugador__c/fields/Dorsal__c.field-meta.xml
<CustomField>
    <fullName>Dorsal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dorsal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>