SportManager/force-app/main/default/objects/Jugador__c/fields/Mundo_Deportivo_Link__c.field-meta.xml
<CustomField>
    <fullName>Mundo_Deportivo_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://stories.mundodeportivo.com/search?q=&apos;+Nombre__c+&apos; &apos;+ Apellidos__c, &quot;Ver noticias en mundo deportivo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mundo Deportivo Link</label>
    <type>Text</type>
</CustomField>