SportManager/force-app/main/default/objects/Jugador__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pais</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Jugadores</relationshipLabel>
    <relationshipName>Jugadores</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>