SportManager/force-app/main/default/objects/Jugador__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>