SportManager/force-app/main/default/objects/Jugador__c/fields/Wikipedia_Link__c.field-meta.xml
<CustomField>
    <fullName>Wikipedia_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://es.wikipedia.org/wiki/&apos;+Nombre__c+&apos; &apos;+ Apellidos__c, &quot;Ir a wikipedia&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wikipedia Link</label>
    <type>Text</type>
</CustomField>