SportManager/force-app/main/default/objects/Jugador__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Nombre__c</columns>
    <columns>Apellidos__c</columns>
    <columns>Pais__c</columns>
    <columns>Tipo__c</columns>
    <columns>Club__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>