SportManager/force-app/main/default/objects/Jugador__c/listViews/Posicion.listView-meta.xml
<ListView>
    <fullName>Posicion</fullName>
    <columns>Tipo__c</columns>
    <columns>Apellidos__c</columns>
    <columns>Dorsal__c</columns>
    <columns>Pais__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Tipo__c</field>
        <operation>contains</operation>
        <value>Portero,Defensa Central,Defensa Lateral,Delantero</value>
    </filters>
    <label>Posicion</label>
</ListView>